# Weasel_toy_experiment

./: .gitignore  CLAUDE.md  CLAUDE_dual_stream_decode.md  PAPER_BIB.md  README.md  TODO.md  androidworld_tpu_jax_server.py  bench_qwen3vl.py  compare_blocks.py  compare_e2e.py  compare_gdn_exact.py  dual_stream_decode_jax.py  dvlm_decode_jax.py  grounded_ar_jax.py  main.py  pyproject.toml  run_qwen35.py  run_qwen3vl.py  train_qwen3vl.py
aw_eval/: CLAUDE.md  CURATION_PLAN.md  FINDINGS.md  PLAYBOOK_v6e16.md  TRAINING_v6e16.md  bd_sweep.py  config.py  launch_aw_server.sh  summarize_cell.py  tunnel_supervisor.sh  verify_repro.sh
aw_eval/runs/: results.jsonl
aw_eval/vultr/: aw_auto_open.py  guiowl_androidworld_agent.py  setup_env_once.py
aw_eval/vultr/scripts/: run_eval_massive_autoopen.sh  run_one_eval.sh  summarize_androidworld_run.py
bench/: README.md
bench/calvin/: README.md  random_rollout.py  run.sh
bench/ogbench/: README.md  run.sh
bench/vla/: README.md  run.sh
commands/: CHECKPOINT_DECOUPLED.md  README.md  REASONING_SFT_RECIPE.md  V6E16_MULTIHOST_PLAYBOOK.md  bench_ogbench.sh  benchmark.sh  download.sh  eval.sh  launch_fastdvlm_reasoning.sh  launch_fastdvlm_v6e16.sh  preprocess.sh  tpu_v6e16_fastdvlm_zero1_recipe.md  tpu_v6e32_fastdvlm_episode_kd_recipe.md  tpu_v6e_fastdvlm_kd_recipe.md  train.sh  train_long.sh  v6e16_cost.py
compare/: README.md  compare_blocks.py  compare_e2e.py  compare_gdn_exact.py  compare_rtc.py
data/: README.md
data/download/fywang/: calvin-task-ABCD-D-lerobot.py
dataset_gen/: README.md
dataset_gen/run/: render_giant.sh  render_large.sh  render_medium.sh
dataset_gen/scripts/: make_paired_dataset_fast.py  validate_antmaze_dataset.py
dataset_gen/spec/: camera_params.md  episode_stats.md  schema.md
docs/: COORDINATE_CONVENTION.md  DATASETS.md  METHODOLOGY_AND_DECISIONS.md  RESUME_FROM_GITHUB.md
model/: modeling.py  params.py
model35/: gated_delta_net.py  modeling.py  params.py
result/: README.md
result/vla_abcd/: train_log.csv
result/vla_abcd_flower/: train_log.csv
scripts/: CLAUDE_train_fastdvlm_tpu.md  README.md  benchmark_calvin.py  benchmark_calvin_mp.py  eval_offline.py  inspect_nan_batch.py  preprocess_vlm_cache.py  stitch_and_ship_checkpoint.py  test_fastdvlm_kd_curriculum.py  test_multihost_api.py  test_tpu_distributed.py  test_vit_lora.py  train_fastdvlm_tpu.py
src/qwen/: README.md  inference.py  train.py
(+32 files in other folders)
