[project]
name = "qwen3vl-serve"
version = "0.1.0"
description = "Qwen3-VL 2B / Qwen3.5-0.8B JAX/Flax inference & training on TPU v4-8"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax[tpu]>=0.6.0",
    "flax>=0.10.0",
    "optax>=0.2.0",
    "huggingface-hub>=1.10.1",
    "pillow>=12.2.0",
    "qwen-vl-utils>=0.0.14",
    "safetensors>=0.7.0",
    "transformers>=5.5.3",
]
