[project]
name = "weasel-toy"
version = "0.4.0"
description = "Toy experiments: Qwen VLM + VLA flow matching (JAX/TPU), OGBench, CALVIN"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax[tpu]>=0.6.0",
    "flax>=0.10.0",
    "optax>=0.2.0",
    "huggingface-hub>=1.10.1",
    "pillow>=12.2.0",
    "numpy>=1.24.0",
    "qwen-vl-utils>=0.0.14",
    "safetensors>=0.7.0",
    "transformers>=4.57.1",
    "imageio>=2.30.0",
    "imageio-ffmpeg>=0.4.0",
    "datasets>=2.14.0",
]

[project.optional-dependencies]
vla = [
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "bitsandbytes>=0.49.2",
    "accelerate>=1.2.0",
    "matplotlib>=3.7.0",
    "datasets>=2.14.0",
]
dev = ["ruff>=0.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qwen"]

[tool.ruff]
src = ["src"]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["qwen"]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
